--- a/app/src/main/res/layout/fragment_maak_stemmingen.xml
+++ b/app/src/main/res/layout/fragment_maak_stemmingen.xml
@@ -83,7 +83,7 @@
         android:id="@+id/maakStemmingButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
+        android:text="@string/save_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
