--- a/app/src/main/res/layout/item_stemming.xml
+++ b/app/src/main/res/layout/item_stemming.xml
@@ -33,7 +33,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
-        android:textColor="#000000"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,7 +47,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="23dp"
         android:text="TextView"
-        android:textColor="#808080"
+        android:textColor="@android:color/tertiary_text_light"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="@+id/txtStemmingTitle"
         app:layout_constraintTop_toBottomOf="@+id/txtStemmingTitle" />
